package model;

public interface InterestPayable {
    void payInterest();
}
